Fix h1 line spacing

--- a/style.scss
+++ b/style.scss
@@ -52,6 +52,7 @@ h1 {
   font-size: 2.4em;
   letter-spacing: -1px;
   font-weight: 300;
+  line-height: 0.9em;
 }
 
 h2 {
